--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -333,5 +333,55 @@
   "leaderboardUpdated": "Aktualizacja",
   "navMyDog": "Mój pies",
   "doghousesTitle": "Budy",
-  "navProfile": "Profil"
+  "navProfile": "Profil",
+  "walkthrough": {
+    "steps": {
+      "gainingExperience": {
+        "title": "Zdobywanie doświadczenia",
+        "desc": "Zdobywaj PD, stawiając własne budy i atakując wrogie budy. Po awansie dostajesz punkty umiejętności, by wzmocnić swojego psa.",
+        "hint": "Włącz GPS i stawiaj budy w niewielkiej odległości od innych.",
+        "howto": [
+          "Lewy dolny róg: stuknij przycisk z budą i plusem, aby postawić budę w swojej lokalizacji.",
+          "Aby zaatakować: stuknij wrogi znacznik budy, otwórz panel i stuknij Atak trzy razy.",
+          "Aby uleczyć: stuknij swoją budę, otwórz panel i stuknij Napraw trzy razy.",
+          "Po awansie: odbierz nagrody, potem otwórz widok Psa i przydziel punkt umiejętności."
+        ]
+      },
+      "energyMechanics": {
+        "title": "Energia",
+        "desc": "Atak i leczenie zużywają energię. Energia odnawia się automatycznie: +1 dziennie za każdą posiadaną budę.",
+        "hint": "Planuj większe starcia, gdy masz więcej energii lub więcej bud.",
+        "howto": [
+          "Sprawdź energię w prawym górnym rogu (ikona pioruna).",
+          "Atak zużywa energię; naprawa własnej budy również zużywa energię.",
+          "Im więcej bud posiadasz, tym większy dzienny przyrost energii."
+        ]
+      },
+      "dailyQuests": {
+        "title": "Zadania dzienne i Rankingi",
+        "desc": "Wykonuj zadania dzienne, aby zdobywać nagrody i sprawdzać swoją pozycję w rankingach.",
+        "hint": "Codziennie zrób kilka szybkich zadań, by piąć się w górę.",
+        "howto": [
+          "Otwórz Zadania dzienne, zobacz dzisiejsze cele i odbierz nagrody po ukończeniu.",
+          "Otwórz Rankingi, by zobaczyć swój wynik i porównać się z innymi."
+        ]
+      },
+      "premiumShop": {
+        "title": "Premium i Sklep",
+        "desc": "Kup Premium, aby odblokować premium ikony psów i nielimitowane zmiany nazw. W Sklepie kupisz Smakołyki (waluta w grze) — za nie kupisz dodatkowe budy, tokeny zmiany nazw i pakiety naprawcze.",
+        "hint": "Premium to personalizacja; Smakołyki przyspieszają postępy.",
+        "howto": [
+          "Wejdź do Sklepu, aby zobaczyć Premium i inne oferty.",
+          "Kup Premium, aby włączyć premium ikony psów i nielimitowane zmiany nazw psa i bud.",
+          "Kup Smakołyki, aby zdobyć dodatkowe budy, tokeny zmiany nazw i pakiety naprawcze."
+        ]
+      }
+    },
+    "buttons": {
+      "back": "Wstecz",
+      "next": "Dalej",
+      "done": "Gotowe",
+      "close": "Zamknij"
+    }
+  }
 }
