Change design of SignIn view

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -311,5 +311,14 @@
   "leaderboardUpdated": "আপডেট করা হয়েছে",
   "navMyDog": "আমার কুকুর",
   "doghousesTitle": "ডগহাউস",
-  "navProfile": "প্রোফাইল"
+  "navProfile": "প্রোফাইল",
+  "signIn": {
+    "heroEyebrow": "Join the pack",
+    "heroHeadline": "Lead your dog to victory",
+    "heroSubtitle": "Sign in to launch raids, repair doghouses, and climb the leaderboards.",
+    "featureExplore": "Explore the shared world map",
+    "featureBuild": "Build and defend doghouses",
+    "featureCompete": "Compete on daily quests",
+    "secondaryHint": "You can switch accounts later from the profile menu."
+  }
 }
