--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -311,5 +311,14 @@
   "leaderboardUpdated": "تم التحديث",
   "navMyDog": "كلبي",
   "doghousesTitle": "بيوت الكلاب",
-  "navProfile": "الملف الشخصي"
+  "navProfile": "الملف الشخصي",
+  "signIn": {
+    "heroEyebrow": "Join the pack",
+    "heroHeadline": "Lead your dog to victory",
+    "heroSubtitle": "Sign in to launch raids, repair doghouses, and climb the leaderboards.",
+    "featureExplore": "Explore the shared world map",
+    "featureBuild": "Build and defend doghouses",
+    "featureCompete": "Compete on daily quests",
+    "secondaryHint": "You can switch accounts later from the profile menu."
+  }
 }
