--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -311,5 +311,14 @@
   "leaderboardUpdated": "Aktualisiert am",
   "navMyDog": "Mein Hund",
   "doghousesTitle": "Hundehütten",
-  "navProfile": "Profil"
+  "navProfile": "Profil",
+  "signIn": {
+    "heroEyebrow": "Join the pack",
+    "heroHeadline": "Lead your dog to victory",
+    "heroSubtitle": "Sign in to launch raids, repair doghouses, and climb the leaderboards.",
+    "featureExplore": "Explore the shared world map",
+    "featureBuild": "Build and defend doghouses",
+    "featureCompete": "Compete on daily quests",
+    "secondaryHint": "You can switch accounts later from the profile menu."
+  }
 }
