--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -317,5 +317,14 @@
   "leaderboardUpdated": "Actualizado",
   "navMyDog": "Mi perro",
   "doghousesTitle": "Casetas",
-  "navProfile": "Perfil"
+  "navProfile": "Perfil",
+  "signIn": {
+    "heroEyebrow": "Join the pack",
+    "heroHeadline": "Lead your dog to victory",
+    "heroSubtitle": "Sign in to launch raids, repair doghouses, and climb the leaderboards.",
+    "featureExplore": "Explore the shared world map",
+    "featureBuild": "Build and defend doghouses",
+    "featureCompete": "Compete on daily quests",
+    "secondaryHint": "You can switch accounts later from the profile menu."
+  }
 }
