--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -315,5 +315,14 @@
   "leaderboardUpdated": "Mis à jour le",
   "navMyDog": "Mon chien",
   "doghousesTitle": "Niches",
-  "navProfile": "Profil"
+  "navProfile": "Profil",
+  "signIn": {
+    "heroEyebrow": "Join the pack",
+    "heroHeadline": "Lead your dog to victory",
+    "heroSubtitle": "Sign in to launch raids, repair doghouses, and climb the leaderboards.",
+    "featureExplore": "Explore the shared world map",
+    "featureBuild": "Build and defend doghouses",
+    "featureCompete": "Compete on daily quests",
+    "secondaryHint": "You can switch accounts later from the profile menu."
+  }
 }
