--- a/src/i18n/it.json
+++ b/src/i18n/it.json
@@ -315,5 +315,14 @@
   "leaderboardUpdated": "Aggiornato il",
   "navMyDog": "Il mio cane",
   "doghousesTitle": "Cuccie",
-  "navProfile": "Profilo"
+  "navProfile": "Profilo",
+  "signIn": {
+    "heroEyebrow": "Join the pack",
+    "heroHeadline": "Lead your dog to victory",
+    "heroSubtitle": "Sign in to launch raids, repair doghouses, and climb the leaderboards.",
+    "featureExplore": "Explore the shared world map",
+    "featureBuild": "Build and defend doghouses",
+    "featureCompete": "Compete on daily quests",
+    "secondaryHint": "You can switch accounts later from the profile menu."
+  }
 }
