--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -383,5 +383,14 @@
       "done": "Gotowe",
       "close": "Zamknij"
     }
+  },
+  "signIn": {
+    "heroEyebrow": "Join the pack",
+    "heroHeadline": "Lead your dog to victory",
+    "heroSubtitle": "Sign in to launch raids, repair doghouses, and climb the leaderboards.",
+    "featureExplore": "Explore the shared world map",
+    "featureBuild": "Build and defend doghouses",
+    "featureCompete": "Compete on daily quests",
+    "secondaryHint": "You can switch accounts later from the profile menu."
   }
 }
